--- a/src/styles/bootstrap/scss/_variables.scss
+++ b/src/styles/bootstrap/scss/_variables.scss
@@ -1,3 +1,5 @@
 @import "../../../../node_modules/bootstrap/scss/functions";
 @import "custom";
 @import "../../../../node_modules/bootstrap/scss/variables";
+@import "../../../../node_modules/bootstrap/scss/mixins/breakpoints";
+@import "../../../../node_modules/bootstrap/scss/mixins/grid";
