--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
-@import "../styles/bootstrap/scss/variables";
+@import "custom-variables";
+@import "breakpoints";
 
 span {
   background-color: lighten(red, 25%);
