Remove excess _breakpointss file

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@ span {
   background-color: lighten(red, 25%);
 
   @include media-breakpoint-up(md) {
-    background: green;
+    background: $blue;
   }
 
 }
